--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-	<title>PHYSIO-ACTIV-HOYA Martin Ebel</title>
-	<link rel="stylesheet" type="text/css" href="components/normalize-css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="css/min-style.css">
-</head>
-<body>
+//= template/start.html
+
+
 	<header class="page-header">
 		<h1 class="visualy-hidden">Physio Activ Hoya</h1>
-		<img src="img/main-logo.png" class="page-header__logo" width="149" height="40">
+		<img src="img/main-logo.png" class="page-header__logo" width="149" height="40" alt="Physio Activ">
 		<nav class="page-navigation">
 			<ul class="page-navigation__list">
-				<li class="page-navigation__item page-navigation__item--active"><a href="#">Start</a></li>
+				<li class="page-navigation__item  page-navigation__item--active"><a href="#">Start</a></li>
 				<li class="page-navigation__item"><a href="#">Unsere Leistungen</a></li>
 				<li class="page-navigation__item"><a href="#">Das Team</a></li>
 				<li class="page-navigation__item"><a href="#">Kontakt</a></li>
@@ -26,8 +19,8 @@
 
 			<input type="radio" name="page-slaider" class="page-slaider__slaid-1" value="page-slaider__slaid-1" checked id="page-slaider__slaid-1">
 			<label class="slaid-indicator  slaid-indicator--first" for="page-slaider__slaid-1"></label>
-			<span class="slaider-item__data  slaider-item__data--first">
-				<img src="img/slaider-item1.png" class="slaider-item__img--first">
+			<div class="slaider-item__data  slaider-item__data--first">
+				<img src="img/slaider-item1.png" class="slaider-item__img--first" alt="slaider-item-1">
 				<div class="slaider-text__wrapper">
 					<h2 class="slaider-item__slogan">Guten Tag!</h2>
 					<ul class="slaider-item__features">
@@ -37,12 +30,12 @@
 					</ul>
 					<a href="#" class="slaider-item__btn">Unser Team...</a>
 				</div>	
-			</span>
+			</div>
 			
 			<input type="radio" name="page-slaider" class="page-slaider__slaid-2" value="page-slaider__slaid-2" id="page-slaider__slaid-2">
 			<label class="slaid-indicator  slaid-indicator--second" for="page-slaider__slaid-2"></label>
-			<span class="slaider-item__data  slaider-item__data--second">
-				<img src="img/slaider-item3.png" class="slaider-item__img--second">
+			<div class="slaider-item__data  slaider-item__data--second">
+				<img src="img/slaider-item3.png" class="slaider-item__img--second" alt="slaider-item-3">
 				<div class="slaider-text__wrapper">
 					<h2 class="slaider-item__slogan">Physiotherapie</h2>
 					<ul class="slaider-item__features">
@@ -51,15 +44,15 @@
 					</ul>
 					<a href="#" class="slaider-item__btn">Mehr erfahren...</a>
 				</div>
-			</span>
+			</div>
 
 			<input type="radio" name="page-slaider" class="page-slaider__slaid-3" value="page-slaider__slaider-item-3" id="page-slaider__slaid-3">
 			<label class="slaid-indicator slaid-indicator--third" for="page-slaider__slaid-3"></label>
-			<span class="slaider-item-3__data slaider-item__data">
+			<div class="slaider-item-3__data slaider-item__data">
 
-				<img src="img/slaider-item2.png" class="slaider-item__img--third">
+				<img src="img/slaider-item2.png" class="slaider-item__img--third" alt="slaider-item-3">
 				<h2 class="slaider-item__slogan">Milon CARE Zirkel</h2>
-			</span>
+			</div>
 
 		</div>
 	</section>
@@ -72,17 +65,17 @@
 			</div>
 			<div class="page-information__table">
 				<div class="table__table-item">
-					<a href="#" class="table-item__link">Weiter lesen...</a>
+					<a href="#" class="table-item__link table-item__link--first">Weiter lesen...</a>
 					<h2>Nachhaltiges Abnehmen</h2>
 					<p>Kraft und Kondition aufbauen! Erfolge in nur zweimal 35 Minuten pro Woche! Alle wollen möglichst gesund und aktiv bleiben. Der Weg dorthin ist Prävention. Zwar hat sich die durchschnittliche Lebensdauer erheblich verlängert, das Krankheitsrisiko hat sich aber deutlich erhöht. Wir haben einfach mehr Krankheiten und begünstigen diese durch unsere veränderte Lebensweise – mangelnde Bewegung, falsches Sitzen und einseitige Belastung am Arbeitsplatz, falsche Ernährung und psychische Belastung. Mit einem regelmäßigen Training im Gesundheitszentrum wird viel erreicht. Schon zweimal 35 Minuten in der Woche verändern den Lebensrhythmus, steigern das Wohlbefinden und beugen Krankheiten vor.</p>
 				</div>
 				<div class="table__table-item">
-					<a href="#" class="table-item__link">Weiter lesen...</a>
+					<a href="#" class="table-item__link  table-item__link--second">Weiter lesen...</a>
 					<h2>Gesunder Rücken</h2>
 					<p>In Deutschland haben statistisch gesehen 30 bis 40 % der Menschen Rückenschmerzen. Etwa 70 % haben die Schmerzen mindestens einmal im Jahr und etwa 80 % klagen mindestens einmal im Leben über Rückenschmerzen. Bei Männern sind sie die häufigste, bei Frauen die zweithäufigste Ursache für Arbeitsausfälle. Rückenschmerzen sorgen für die Hälfte aller Frühverrentungen.</p>
 				</div>
 				<div class="table__table-item">
-					<a href="#" class="table-item__link">Weiter lesen...</a>
+					<a href="#" class="table-item__link  table-item__link--third">Weiter lesen...</a>
 					<h2>Junges Herz</h2>
 					<p>HERZKREISLAUFSCHWÄCHE
 					Es gibt drei Volkskrankheiten, unter denen wir heute verstärkt leiden: Herzkreislaufschwäche, Rückenschmerzen und Übergewicht. Fast jeder zweite Todesfall geht auf die Erkrankung des Herz-Kreislauf- Systems zurück. Vor allem ältere Menschen sind davon betroffen. Angesichts der steigenden Lebenserwartung und der wachsenden Anzahl chronischer Herzerkrankungen ist mit einer Zunahme dieser Zahlen zu rechnen. Aus diesem Grund garantiert der milon Zirkel ein abwechslungsreiches und effektives Herz- Kreislauf-Training.</p>
@@ -90,5 +83,29 @@
 			</div>
 		</div>
 	</section>
-</body>
-</html>
+
+<footer class="page-footer">
+	<div class="page-footer__wraper">
+		<div class="page-footer__work-time">
+			<h2 class="work-time__title">Öffnungszeiten</h2>
+			<p>Montag bis Freitag:
+				8 bis 20 Uhr
+				<br>
+				Sonntag:
+				10 bis 13 Uhr
+			</p>
+		</div>
+		<div class="page-footer__kontakt">
+
+			<h2 class="kontakt__title">Kontakt</h2>
+			<b>Physio Aktiv</b>
+			<a href="#" class="kontakt__adress"> Deichstrasse 52-56
+				27318 Hoya</a>
+			<a href="#" class="kontakt__phone"> 04251-1460</a>
+			<a href="#" class="kontakt__mail"> info@physio-aktiv-hoya.de</a>
+		</div>
+	</div>
+		<div class="page-footer__copyright">lBeJIuk 2017</div>
+</footer>
+
+//= template/end.html
