--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,18 @@
 
 
 	<header class="page-header">
-		<h1 class="visualy-hidden">Physio Activ Hoya</h1>
-		<img src="img/main-logo.png" class="page-header__logo" width="149" height="40" alt="Physio Activ">
-		<nav class="page-navigation">
-			<ul class="page-navigation__list">
-				<li class="page-navigation__item  page-navigation__item--active"><a href="#">Start</a></li>
-				<li class="page-navigation__item"><a href="#">Unsere Leistungen</a></li>
-				<li class="page-navigation__item"><a href="#">Das Team</a></li>
-				<li class="page-navigation__item"><a href="#">Kontakt</a></li>
-			</ul>
-		</nav>
+		<div class="page-header__wrapper">
+			<h1 class="visualy-hidden">Physio Activ Hoya</h1>
+			<img src="img/main-logo.png" class="page-header__logo" width="149" height="40" alt="Physio Activ">
+			<nav class="page-navigation">
+				<ul class="page-navigation__list">
+					<li class="page-navigation__item  page-navigation__item--active"><a href="#">Start</a></li>
+					<li class="page-navigation__item"><a href="#">Unsere Leistungen</a></li>
+					<li class="page-navigation__item"><a href="#">Das Team</a></li>
+					<li class="page-navigation__item"><a href="#">Kontakt</a></li>
+				</ul>
+			</nav>
+		</div>
 	</header>
 	
 	<section class="page-slaider">
@@ -61,8 +63,9 @@
 		<div class="page-information__wraper">
 			<div class="page-information__header">
 				<p>Willkommen auf dem Webseiten von</p>
-				<h1>Physio-Activ</h1>
+				<h2>Physio-Activ</h2>
 			</div>
+			<div class="page-information__shadow"></div>
 			<div class="page-information__table">
 				<div class="table__table-item">
 					<a href="#" class="table-item__link table-item__link--first">Weiter lesen...</a>
@@ -89,20 +92,30 @@
 		<div class="page-footer__work-time">
 			<h2 class="work-time__title">Öffnungszeiten</h2>
 			<p>Montag bis Freitag:
+				<br>
 				8 bis 20 Uhr
 				<br>
+				<br>
 				Sonntag:
+				<br>
 				10 bis 13 Uhr
 			</p>
 		</div>
 		<div class="page-footer__kontakt">
 
 			<h2 class="kontakt__title">Kontakt</h2>
+			<br>
 			<b>Physio Aktiv</b>
+			<br>
 			<a href="#" class="kontakt__adress"> Deichstrasse 52-56
+			<br>
 				27318 Hoya</a>
-			<a href="#" class="kontakt__phone"> 04251-1460</a>
-			<a href="#" class="kontakt__mail"> info@physio-aktiv-hoya.de</a>
+			<br>
+			<br>
+			<a href="tel:04251-1460" class="kontakt__phone"> 04251-1460</a>
+			<br>
+			<br>
+			<a href="mailto:info@physio-aktiv-hoya.de" class="kontakt__mail"> info@physio-aktiv-hoya.de</a>
 		</div>
 	</div>
 		<div class="page-footer__copyright">lBeJIuk 2017</div>
