доавил и стилизовал меню второго уровня

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,15 @@
 			<nav class="page-navigation">
 				<ul class="page-navigation__list">
 					<li class="page-navigation__item  page-navigation__item--active"><a href="#">Start</a></li>
-					<li class="page-navigation__item"><a href="#">Unsere Leistungen</a></li>
+					<li class="page-navigation__item">
+						<ul class="second-level-menu">
+							<li class="secondl-level-menu__item"><a href="leistung_physiotherapie.html">Physiotherapie</a></li>
+							<li class="secondl-level-menu__item"><a href="#">Kurse</a></li>
+							<li class="secondl-level-menu__item"><a href="#">Milon-Zirkel</a></li>
+							<li class="secondl-level-menu__item"><a href="#">Leistungen im Überblick</a></li>
+						</ul>
+						<a href="#">Unsere Leistungen</a>
+					</li>
 					<li class="page-navigation__item"><a href="#">Das Team</a></li>
 					<li class="page-navigation__item"><a href="#">Kontakt</a></li>
 				</ul>
@@ -86,39 +94,5 @@
 			</div>
 		</div>
 	</section>
-
-<footer class="page-footer">
-	<div class="page-footer__wraper">
-		<div class="page-footer__work-time">
-			<h2 class="work-time__title">Öffnungszeiten</h2>
-			<p>Montag bis Freitag:
-				<br>
-				8 bis 20 Uhr
-				<br>
-				<br>
-				Sonntag:
-				<br>
-				10 bis 13 Uhr
-			</p>
-		</div>
-		<div class="page-footer__kontakt">
-
-			<h2 class="kontakt__title">Kontakt</h2>
-			<br>
-			<b>Physio Aktiv</b>
-			<br>
-			<a href="#" class="kontakt__adress"> Deichstrasse 52-56
-			<br>
-				27318 Hoya</a>
-			<br>
-			<br>
-			<a href="tel:04251-1460" class="kontakt__phone"> 04251-1460</a>
-			<br>
-			<br>
-			<a href="mailto:info@physio-aktiv-hoya.de" class="kontakt__mail"> info@physio-aktiv-hoya.de</a>
-		</div>
-	</div>
-		<div class="page-footer__copyright">lBeJIuk 2017</div>
-</footer>
 
 //= template/end.html
