доделал сайт полностью

--- a/src/leistung_milon.html
+++ b/src/leistung_milon.html
@@ -12,9 +12,9 @@
 					<li class="page-navigation__item  "><a href="index.html">Start</a></li>
 					<li class="page-navigation__item page-navigation__item--active">
 						<ul class="second-level-menu ">
-							<li class="secondl-level-menu__item "><a >Physiotherapie</a></li>
+							<li class="secondl-level-menu__item "><a href="leistung_physiotherapie.html">Physiotherapie</a></li>
 							<li class="secondl-level-menu__item"><a href="leistung_kurse.html">Kurse</a></li>
-							<li class="secondl-level-menu__item"><a href="leistung_milon.html">Milon-Zirkel</a></li>
+							<li class="secondl-level-menu__item"><a>Milon-Zirkel</a></li>
 							<li class="secondl-level-menu__item"><a href="leistung_ueberblick.html">Leistungen im Überblick</a></li>
 						</ul>
 						<a href="#">Unsere Leistungen</a>
@@ -29,20 +29,24 @@
 	<section class="main-information">
 		<header class="main-information__header">
 			<div class="wrapper">
-				<h1>Physiotherapie</h1>
+				<h1>Milon-Zirkel</h1>
 			</div>
 		</header>
 			<article class="main-information__description">
 			<div class="wrapper">
+				<h3>Neu ab April 2015!</h3>
+				<p>Der Milon-Zirkel besteht aus modernen und hochwertigen Trainingsgeräten. Der neue Milon-Zirkel beinhaltet die Softwarelösung CARE! Durch dieses Netzwerk sind alle Trainingsgeräte schnell und automatisch eingestellt. In dem neuen MILON-System ist ein Bodyscanner integriert. Der Trainingsteilnehmer wird gescannt und die Daten werden auf die Geräte übertragen. Die Geräteeinstellung verändern sich und sind optimal angepasst. In Verbindung mit der Chip-Karte ist so jederzeit das individuelle Trainingsprogramm startbereit.
+				Auch von Zuhause kann man das Netzwerk nutzen und zum Beispiel die Trainingsfortschritte analysieren.</p>
+				<h4>Resultat: Trainingssicherheit = 100%</h4>
 				<h3>Willkommen!</h3>
 				<div class="description__list">
 					<div class="list__information-col">
 						<h2>Wir bieten Ihnen an:</h2>
-						<p>Kommen Sie gern mit Ihrem ärztlichen Rezept und/oder Ihrem Befund zu uns. Wir schlagen Ihnen eine individuell ausgerichtete Behandlung vor.</p>
+						<p>Hochwertige und moderne Trainingsgeräte. Mit Chipkarte!</p>
 					</div>
 					<div class="list__information-col">
-						<h2>Krankenkasse oder Selbstzahler?</h2>
-						<p>Wir arbeiten mit allen gesetzlichen und privaten Krankenkassen zusammen. Als Selbstzahler können Sie all unsere Leistungen ebenso nutzen.</p>
+						<h2>Chipkarte</h2>
+						<p>Der Clou des Milon-Zirkels ist die Chipkarte! Einfach in das Gerät stecken und schon „kennt“ es Ihre individuellen Körpermaße und Ihre Trainingsvorgaben.</p>
 					</div>
 					<div class="list__information-col">
 						<h2>Heute anmelden!</h2>
@@ -50,12 +54,12 @@
 						<a href="#" class="btn ">Anfrage</a>
 					</div>
 						<figure  class="leistung-img">
-							<img src="img/information-1.jpg" alt="table__information-1">
-							<figcaption>Angenehm und nützlich</figcaption>
+							<img src="img/information-5.jpg" alt="table__information-3">
+							<figcaption>Entspannt und trotzdem effektiv</figcaption>
 						</figure>
 						<figure  class="leistung-img">
-							<img src="img/information-2.jpg" alt="table__information-2">
-							<figcaption>Helfende Hände</figcaption>
+							<img src="img/information-6.jpg" alt="table__information-4">
+							<figcaption>Für jedes Alter</figcaption>
 						</figure>
 				</div>
 
