--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,13 @@
 					<li class="page-navigation__item">
 						<ul class="second-level-menu">
 							<li class="secondl-level-menu__item"><a href="leistung_physiotherapie.html">Physiotherapie</a></li>
-							<li class="secondl-level-menu__item"><a href="#">Kurse</a></li>
-							<li class="secondl-level-menu__item"><a href="#">Milon-Zirkel</a></li>
-							<li class="secondl-level-menu__item"><a href="#">Leistungen im Überblick</a></li>
+							<li class="secondl-level-menu__item"><a href="leistung_kurse.html">Kurse</a></li>
+							<li class="secondl-level-menu__item"><a href="leistung_milon.html">Milon-Zirkel</a></li>
+							<li class="secondl-level-menu__item"><a href="leistung_ueberblick.html">Leistungen im Überblick</a></li>
 						</ul>
 						<a href="#">Unsere Leistungen</a>
 					</li>
-					<li class="page-navigation__item"><a href="#">Das Team</a></li>
+					<li class="page-navigation__item"><a href="team.html">Das Team</a></li>
 					<li class="page-navigation__item"><a href="#">Kontakt</a></li>
 				</ul>
 			</nav>
@@ -38,7 +38,7 @@
 						<li class="features-item">Ich bin Physiotherapeut</li>
 						<li class="features-item">... und ich frueu mich auf Sie!</li>
 					</ul>
-					<a href="#" class="slaider-item__btn">Unser Team...</a>
+					<a href="#" class="btn btn--slaider-item">Unser Team...</a>
 				</div>	
 			</div>
 			
@@ -52,7 +52,7 @@
 						<li class="features-item">Individuele Behandlungen</li>
 						<li class="features-item">Mit oder ohne Rezept</li>
 					</ul>
-					<a href="#" class="slaider-item__btn">Mehr erfahren...</a>
+					<a href="#" class="btn btn--slaider-item">Mehr erfahren...</a>
 				</div>
 			</div>
 
