--- a/src/leistung_kurse.html
+++ b/src/leistung_kurse.html
@@ -12,8 +12,8 @@
 					<li class="page-navigation__item  "><a href="index.html">Start</a></li>
 					<li class="page-navigation__item page-navigation__item--active">
 						<ul class="second-level-menu ">
-							<li class="secondl-level-menu__item "><a >Physiotherapie</a></li>
-							<li class="secondl-level-menu__item"><a href="leistung_kurse.html">Kurse</a></li>
+							<li class="secondl-level-menu__item "><a href="leistung_physiotherapie.html">Physiotherapie</a></li>
+							<li class="secondl-level-menu__item"><a>Kurse</a></li>
 							<li class="secondl-level-menu__item"><a href="leistung_milon.html">Milon-Zirkel</a></li>
 							<li class="secondl-level-menu__item"><a href="leistung_ueberblick.html">Leistungen im Überblick</a></li>
 						</ul>
@@ -29,7 +29,7 @@
 	<section class="main-information">
 		<header class="main-information__header">
 			<div class="wrapper">
-				<h1>Physiotherapie</h1>
+				<h1>Kurse</h1>
 			</div>
 		</header>
 			<article class="main-information__description">
@@ -38,24 +38,24 @@
 				<div class="description__list">
 					<div class="list__information-col">
 						<h2>Wir bieten Ihnen an:</h2>
-						<p>Kommen Sie gern mit Ihrem ärztlichen Rezept und/oder Ihrem Befund zu uns. Wir schlagen Ihnen eine individuell ausgerichtete Behandlung vor.</p>
+						<p>Rehasportkurse, die Sie mehrmals wöchentlich besuchen können. Wir betreuen Sie kompetent und freundlich.</p>
 					</div>
 					<div class="list__information-col">
-						<h2>Krankenkasse oder Selbstzahler?</h2>
-						<p>Wir arbeiten mit allen gesetzlichen und privaten Krankenkassen zusammen. Als Selbstzahler können Sie all unsere Leistungen ebenso nutzen.</p>
+						<h2>Verein?</h2>
+						<p>Informieren Sie sich auch über unseren Verein Physio-Aktiv-Gesundheitssport Hoya e.V.</p>
 					</div>
 					<div class="list__information-col">
 						<h2>Heute anmelden!</h2>
 						<p>Je früher desto besser gilt auch hier. Fragen Sie uns, was Ihnen helfen kann.</p>
 						<a href="#" class="btn ">Anfrage</a>
 					</div>
-						<figure  class="leistung-img">
-							<img src="img/information-1.jpg" alt="table__information-1">
-							<figcaption>Angenehm und nützlich</figcaption>
+						<figure class="leistung-img">
+							<img src="img/information-3.jpg" alt="table__information-3">
+							<figcaption>Entspannt und trotzdem effektiv</figcaption>
 						</figure>
-						<figure  class="leistung-img">
-							<img src="img/information-2.jpg" alt="table__information-2">
-							<figcaption>Helfende Hände</figcaption>
+						<figure class="leistung-img">
+							<img src="img/information-4.jpg" alt="table__information-4">
+							<figcaption>Für jedes Alter</figcaption>
 						</figure>
 				</div>
 
