добавил адаптивности для планшетов

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 						<a href="#">Unsere Leistungen</a>
 					</li>
 					<li class="page-navigation__item"><a href="team.html">Das Team</a></li>
-					<li class="page-navigation__item"><a href="#">Kontakt</a></li>
+					<li class="page-navigation__item"><a href="kontakt.html">Kontakt</a></li>
 				</ul>
 			</nav>
 		</div>
