добавил немного адаптива(меню) для моильного устройства

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
 			<h1 class="visualy-hidden">Physio Activ Hoya</h1>
 			<img src="img/main-logo.png" class="page-header__logo" width="149" height="40" alt="Physio Activ">
 			<nav class="page-navigation">
+
+				<input type="checkbox" name="" class="page-navigation__togle--checkbox" id="page-navigation__togle">
+				<label class="page-navigation__togle" for="page-navigation__togle"></label>
+				
 				<ul class="page-navigation__list">
 					<li class="page-navigation__item  page-navigation__item--active"><a href="#">Start</a></li>
 					<li class="page-navigation__item">
